infrastructure/base/sealed-secrets/sealed-secrets.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sealed-secrets
  labels:
    networking.tinyrack.net/isolation: enabled
